--- a/src/app/features/summary/summary.component.css
+++ b/src/app/features/summary/summary.component.css
@@ -30,16 +30,16 @@
 }
 
 .action-buttons button {
-  margin-right: 8px; /* Jarak antar tombol */
+  margin-right: 8px;
 }
 
 .action-buttons button:last-child {
-  margin-right: 0; /* Hapus margin pada tombol terakhir */
+  margin-right: 0;
 }
 
 .action-buttons {
   display: flex;
-  justify-content: center; /* Posisi tombol di tengah */
-  align-items: center; /* Pusatkan tombol secara vertikal */
-  gap: 4px; /* Jarak antar tombol */
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
 }
