--- a/src/app/features/dev-plan/dev-plan.component.css
+++ b/src/app/features/dev-plan/dev-plan.component.css
@@ -8,7 +8,7 @@
 }
 
 .division-column {
-  width: 350px; /* Atur lebar kolom sesuai kebutuhan */
+  width: 350px;
   max-width: 350px;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -24,18 +24,18 @@
 }
 
 .action-buttons button {
-  margin-right: 8px; /* Jarak antar tombol */
+  margin-right: 8px;
 }
 
 .action-buttons button:last-child {
-  margin-right: 0; /* Hapus margin pada tombol terakhir */
+  margin-right: 0;
 }
 
 .action-buttons {
   display: flex;
-  justify-content: center; /* Posisi tombol di tengah */
-  align-items: center; /* Pusatkan tombol secara vertikal */
-  gap: 4px; /* Jarak antar tombol */
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
 }
 
 .title {
@@ -93,8 +93,8 @@
 
 .button-container {
   display: flex;
-  justify-content: flex-end; /* Aligns the button to the right */
-  margin-top: 20px; /* Adds some space above the button */
+  justify-content: flex-end;
+  margin-top: 20px;
 }
 
 .column-filter {
@@ -105,5 +105,5 @@
 
 .form-label1 {
   display: block;
-  margin-bottom: 8px; /* Jarak antara label dan input */
+  margin-bottom: 8px;
 }
