--- a/src/app/features/role-menu/role-menu.component.css
+++ b/src/app/features/role-menu/role-menu.component.css
@@ -16,7 +16,7 @@
 }
 
 .division-column {
-  width: 350px; /* Atur lebar kolom sesuai kebutuhan */
+  width: 350px;
   max-width: 350px;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -32,11 +32,11 @@
 }
 
 .action-buttons button {
-  margin-right: 8px; /* Jarak antar tombol */
+  margin-right: 8px;
 }
 
 .action-buttons button:last-child {
-  margin-right: 0; /* Hapus margin pada tombol terakhir */
+  margin-right: 0;
 }
 
 .title {
@@ -94,6 +94,6 @@
 
 .button-container {
   display: flex;
-  justify-content: flex-end; /* Aligns the button to the right */
-  margin-top: 20px; /* Adds some space above the button */
+  justify-content: flex-end;
+  margin-top: 20px;
 }
