--- a/src/app/features/user/user-list/user-list.component.css
+++ b/src/app/features/user/user-list/user-list.component.css
@@ -14,7 +14,7 @@
 }
 
 .division-column {
-  width: 350px; /* Atur lebar kolom sesuai kebutuhan */
+  width: 350px;
   max-width: 350px;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -30,11 +30,11 @@
 }
 
 .action-buttons button {
-  margin-right: 8px; /* Jarak antar tombol */
+  margin-right: 8px;
 }
 
 .action-buttons button:last-child {
-  margin-right: 0; /* Hapus margin pada tombol terakhir */
+  margin-right: 0;
 }
 
 .title {
